test/cpow1.slq

ğ¢:=1i;
def main(){
	a:=ğ‘–^0;
	b:=ğ‘–^2;
	c:=ğ‘–^(1/2); /// error
	d:=cpow(ğ‘–,1/2);
	e:=ğ‘–^ğ‘–; /// error
	return cpow(ğ‘–,1+ğ‘–)=ğ‘–^(1+ğ‘–); /// error
}
